fix some post id

--- a/src/assets/blog/CSC148-期中1-笔记.md
+++ b/src/assets/blog/CSC148-期中1-笔记.md
@@ -1,15 +1,11 @@
 ---
-id: 123456
+id: 1013
 title: CSC148 期中1 笔记
 date: 2024-04-23
-tags: tech
+tags: 
+- 技术
+- 笔记
 ---
-
-## CSC148 期中1 笔记
-
-[Click here for the English version](../CSC148-Midterm1-review.md)
-
-[返回主页](../../zh/README.md)
 
 ### 内存模型（Memory Model）
 
