Rename img folder to blogImg in blog folder

--- a/src/assets/blog/86不存在的战区动画点评.md
+++ b/src/assets/blog/86不存在的战区动画点评.md
@@ -30,6 +30,6 @@ tags:
 
 总体而言，《86不存在的战区》是一部制作极为精良的动画。如果满分为10分的话，我会毫不犹豫地给它9.5分。这部作品在2021年的动画中表现卓越，无论是剧情、人物刻画还是视听效果，都体现了高水平的制作水准。强烈推荐给所有热爱高质量动画的观众，相信它会给你带来深刻的感动和享受。
 
-![86不存在的战区完结](./img/86不存在的战区完结.jpg)
+![86不存在的战区完结](./blogImg/86不存在的战区完结.jpg)
 *(我超喜欢这张图的！！！)*
 
