--- a/src/assets/blog/进击的巨人完结感想.md
+++ b/src/assets/blog/进击的巨人完结感想.md
@@ -14,7 +14,7 @@ tags:
 
 挺难受的，我本来还期待着会有什么更精彩的剧情，哎.....应该算是算是意料之外、情理之中。
 
-![138话p46](./img/进击的巨人138p46.jpg)
+![138话p46](./blogImg/进击的巨人138p46.jpg)
 
 ### 补充：当第139话看完后（2021-04-07）
 >
