--- a/src/assets/blog/铃芽之旅影评.md
+++ b/src/assets/blog/铃芽之旅影评.md
@@ -36,5 +36,5 @@ tags:
 
 如果将《铃芽之旅》视作一部普通的动画电影，它是一部画面优美、笑点频繁的日常风动画。但如果你期待看到新海诚一贯的文学风采、情感震撼和深刻主题，那么这部电影大概率会让你失望。我的评分是7.5/10分，就个人而言，这部电影不会像新海诚的前几部作品那样让我反复观看。
 
-![铃芽之旅海报](./img/铃芽之旅海报.jpg)
+![铃芽之旅海报](./blogImg/铃芽之旅海报.jpg)
 
