--- a/src/assets/blog/青猪12卷关于未来剧情预测.md
+++ b/src/assets/blog/青猪12卷关于未来剧情预测.md
@@ -27,4 +27,4 @@ tags:
 
 推测归推测，现实情况还是要看鸭志老贼怎么写了……但我还是要吐槽一下鸭志老贼出书的速度。一个伏笔埋了三年，一年出一本，你知道我这三年是怎么过来的吗？我从三年前的红衣小女孩开始等，直到现在都还没收回去……急死我了。咳咳，回归正题，我对第十二卷的评价依然是满分10/10。不管是伏笔的设立，还是对情节的把控，鸭志田一老师可以说都做到了极致。整本书没有一处让读者感到无聊，每一句台词都是在为之后的剧情做铺垫。虽然老贼出书速度慢，但有这样的剧情把控力，等这么久也值了。我真心推荐对恋爱、科幻类小说感兴趣的朋友可以试试《青猪》系列，因为这个系列一定会给你一个良好的阅读体验。
 
-![青猪第12卷封面](./img/青猪第12卷封面.jpg)
+![青猪第12卷封面](./blogImg/青猪第12卷封面.jpg)
