Fix incorrect post id issue

--- a/src/assets/blog/2023元旦感悟.md
+++ b/src/assets/blog/2023元旦感悟.md
@@ -13,3 +13,5 @@ tags:
 好啦闲话就先到这里啦，元旦嘛，该写正能量的祝福了：
 
 今天是2023年1月1日，一年的时光如白驹过隙，在新的一年，我们要记得珍惜每一刻，努力把握每一个机会，让自己的人生更加丰富多彩。最后祝自己在新的一年里，万事顺利，少点抑郁，多点欢乐。同时，也祝愿大家在新的一年里，能够披荆斩棘，让自己的学业事业更上一层楼。
+
+![2023元旦锁屏截图](./blogImg/2023元旦锁屏截图.jpg)
