--- a/src/assets/blog/2024元旦感悟.md
+++ b/src/assets/blog/2024元旦感悟.md
@@ -1,5 +1,5 @@
 ---
-id: 1011
+id: 1012
 title: 祝元旦：2023年度总结+保留节目
 date: 2024-01-01
 tags: 
@@ -23,3 +23,5 @@ tags:
 最后，又到了每年的保留节目——祝福语时间：
 
 今天是2024年1月1日，祝愿大家在新的一年里能够自信面对压力，勇往直前，不畏艰辛。为了实现自己的目标，努力拼搏吧！
+
+![2024元旦锁屏截图](./blogImg/2024元旦锁屏截图.jpg)
