--- a/src/assets/blog/1008-人类早期接触网页开发的日记.md
+++ b/src/assets/blog/1008-人类早期接触网页开发的日记.md
@@ -36,7 +36,7 @@ tags:
   - 实现注册和登录功能
   - 解决脚本替代方法
 - **进度展示：**
-![day5](./blogImg/day5.gif)
+![day5](./blogImg/1008/day5.gif)
 
 ---
 
@@ -76,7 +76,7 @@ tags:
   - 完成重命名文件功能
   - 美化UI
 - **进度展示：**
-![day11](./blogImg/day11.gif)
+![day11](./blogImg/1008/day11.gif)
 
 ---
 
@@ -100,7 +100,7 @@ tags:
   - 解决重命名文件功能的bug
   - 美化UI
 - **进度展示：**
-![day14](./blogImg/day14.gif)
+![day14](./blogImg/1008/day14.gif)
 
 ---
 
@@ -111,7 +111,7 @@ tags:
   - 实现临时文件传输功能
   - 美化UI
 - **进度展示：**
-![day15](./blogImg/day15.gif)
+![day15](./blogImg/1008/day15.gif)
 ---
 
 **第16天：状态调整**
@@ -130,9 +130,9 @@ tags:
 - **日志：** 本周任务基本完成，临时传输功能仍有些小问题，但不影响使用。
 - **进度展示：**
   - 临时传输界面
-    ![airdrop UI](./blogImg/day18_airdrop1.jpg)
+    ![airdrop UI](./blogImg/1008/day18_airdrop1.jpg)
   - 获取临时文件
-    ![airdrop get file](./blogImg/day18_airdrop2.jpg)
+    ![airdrop get file](./blogImg/1008/day18_airdrop2.jpg)
 ---
 
 **第19天：总结与展望**
