--- a/src/assets/blog/1012-2024元旦感悟.md
+++ b/src/assets/blog/1012-2024元旦感悟.md
@@ -24,4 +24,4 @@ tags:
 
 今天是2024年1月1日，祝愿大家在新的一年里能够自信面对压力，勇往直前，不畏艰辛。为了实现自己的目标，努力拼搏吧！
 
-![2024元旦锁屏截图](./blogImg/2024元旦锁屏截图.jpg)
+![2024元旦锁屏截图](./blogImg/newYear/2024元旦锁屏截图.jpg)
