--- a/src/assets/blog/1002-2021元旦祝福.md
+++ b/src/assets/blog/1002-2021元旦祝福.md
@@ -8,4 +8,4 @@ tags:
 
 过去的一年或许带来了许多挑战和不如意，但正是这些经历，才为未来的美好惊喜铺平了道路。每一次的挫折和困难，都是成长的契机。愿我们带着这些经历，迎接更加光明的明天，让每一个遗憾都成为未来成功的基石。新的开始，新的希望，愿我们在未来的每一天，都能发现更多的惊喜和美好。
 
-![2021元旦锁屏截图](./blogImg/2021元旦锁屏截图.jpg)
+![2021元旦锁屏截图](./blogImg/newYear/2021元旦锁屏截图.jpg)
