--- a/src/assets/blog/1018-晚安酸欠少女さユり.md
+++ b/src/assets/blog/1018-晚安酸欠少女さユり.md
@@ -16,7 +16,7 @@ tags:
 
 过去的一周里，我就像失去了方向的船只，随波逐流般过着每一个毫无意义的日子。耳边总是萦绕着さユり的歌声，仿佛她依然在用音乐温柔地抚慰我。我反复地听着那些旋律，仿佛想在她的歌声中找到哪怕一丝她还在的证据。然而，她真的走了，像一道消失在夜空中的流星，再也没有了踪影。
 
-还记得大概是在2019年，我第一次遇见了她。那是一个漫无目的的夜晚，我随意地在网络上游荡，无意中看到了推荐说《乱步奇谭》的音乐极其出色。怀着好奇心点了进去，结果，一首『ミカヅキ』彻底俘虏了我的心。她的嗓音带着一丝沙哑，又充满着难以名状的力量，那是一种能够刺穿内心最深处的声音。当第一句人声响起，仿佛我的世界被打开了一扇全新的大门，我知道自己找到了某种特别的存在。
+还记得大概是在2019年，我第一次遇见了她。那是一个漫无目的的夜晚，我如往常一样在上网冲量，无意中点开了案例《乱步奇谭》ED 的视频。怀着好奇心点了进去，仅一句歌词，我的心脏就被『ミカヅキ』彻底俘虏了。她的嗓音带着一丝沙哑，又充满着难以名状的力量，那是一种能够刺穿内心最深处的声音。仿佛我的世界被打开了一扇全新的大门，我知道自己找到了某种特别的存在。
 
 她的歌声里，总是隐含着一种无法言喻的情感，那种痛苦、迷茫和挣扎的音符，仿佛在述说我内心深处的故事。每一首歌、每一个音符，像一根根细细的丝线，将我拉入她编织的世界。在那里，所有的孤独与不安都能得到认同，所有的脆弱都不再羞于展示。
 
@@ -30,11 +30,11 @@ tags:
 
 ## 4
 
-这些日子，本打算记录一些我在开发个人网站时的心得体会，还有对博客未来的一些规划。然而，さユり的离去打乱了我的所有思绪，我再也无心去书写那些琐碎的技术细节。写下这篇文章，只是为了将我这些天以来沉重的情绪宣泄而出，因为心中的痛苦实在难以排遣。
+最近，本打算记录一些我在开发个人网站时的心得体会，还有对博客未来的一些规划。然而，さユり的离去打乱了我的所有思绪，我再也无心去书写那些琐碎的技术细节。写下这篇文章，只是为了将我这些天以来沉重的情绪宣泄而出，因为心中的痛苦实在难以排遣。
 
-这是我第一次经历自己如此喜欢的歌手离世的打击，这种失去感让人措手不及，仿佛在胸口留下了一道无法愈合的创伤。每当想到她再也不会创作新的音乐，再也听不到她的声音，我的心就像被沉重的乌云笼罩。那些无法言说的悲哀与无力感，在每一个寂静的夜晚愈加浓烈，成为一种无处安放的重量。
+第一次经历自己特别喜欢的歌手离世，而且还是突然的、毫无防备的，令人措手不及的。每当想到她再也不会创作新的音乐，再也听不到她的声音，我的心就像被沉重的乌云笼罩。那些无法言说的悲哀与无力感，在每一个寂静的夜晚愈加浓烈，成为一种无处安放的重量。さユり，她的音乐陪伴了我这么多年，而现在，我却再也无法以听众的身份去支持她了。
 
-さユり，她的音乐陪伴了我这么多年。而现在，我却再也无法以听众的身份去陪伴她了。每当想到那些未能实现的梦想，那些未完成的旋律，我的心中就多了一份难以名状的沉重。她的离去让这些梦想永远停留在未完成的状态，仿佛一幅被打断的画卷，带着缺失和遗憾，却又无比珍贵。
+还记得年初，酸欠来中国开巡演时的采访表示，她正在制作新的专辑。但现在每当想到那些未完成的旋律，我的心中就多了一份难以名状的沉重。她的离去让这些事物永远停留在了未完成的状态，仿佛一幅被打断的画卷，带着缺失和遗憾，却又无比珍贵。
 
 再见了，酸欠少女さユり。愿你在另一个世界，也能自由地歌唱，愿你的灵魂在那片永恒的夜空中继续闪耀。
 
