--- a/src/assets/blog/1015-CSC148-期中1-笔记.md
+++ b/src/assets/blog/1015-CSC148-期中1-笔记.md
@@ -7,42 +7,11 @@ tags:
 - 笔记
 ---
 
-### Memory Model
-
-+ Variables
-    + Variables store the memory address of instances (objects) `id(var)`
-    + The equal sign `=` is used to assign values to variables, for example: `a = 1` assigns `id(1)` to the variable `a`
-
-+ Storage Patterns
-
-    + When creating a "container" — `list`, `dict`, `object`
-        + Create outer variables first, then inner variables.
-
-+ Copy Logic
-    ```python
-    lst = [[1], [2]]
-    new_lst = lst  
-    # new_lst stores id(lst)
-    # Changing new_lst[i] will also change lst[i]
-    
-    shallow_copy = lst[:] 
-    # Here, shallow_copy = [id([1]), id([2])] 
-    # This is a shallow copy, only allocates a new list address to new_lst
-    # Instances in new_lst are not copied
-    shallow_copy[1][0] = 3
-    print(lst) # [[3], [2]]
-    ```
-+ Python Features
-    + When creating immutable instances, Python, to save memory, does not create new instances actively. It first looks in memory to see if the instance exists. If it does, it directly references the address of that instance; otherwise, it creates a new instance.
-        + For example, Python pre-creates instances of numbers `1~256` in memory, and when used, Python directly uses these pre-created instances of numbers.
-    + `lst.extend([1,2,3])` is equivalent to `lst += [1,2,3]`
-        + Both do not change the id of `lst`
-
-### Object-Oriented Programming (OOP)
+## Object-Oriented Programming (OOP)
 
 The ability to model - turning business into several organic entities
 
-#### Modeling Process
+## Modeling Process
 
 + Observe the model description, identify how many "things" exist here, and whether there are relationships between them.
     + Distinguish whether an entity is an object or data.
@@ -59,7 +28,7 @@ The ability to model - turning business into several organic entities
     + What type of data is each object's attribute, and are there default values?
     + What parameters does each object's action use, and what type does it return?
 
-#### Basic Concepts of Class
+## Basic Concepts of Class
 
 + Inside a class is a unified whole
     + All attributes can be called anywhere in the class using `self.xxx`
@@ -84,7 +53,7 @@ The ability to model - turning business into several organic entities
     A.foo(a, "test")
     ```
 
-#### Inheritance
+## Inheritance
 + `python` is a single-inheritance language — each class has only one parent class
 + Subclasses can use all attributes of the parent class (attributes)
     + Can call attributes and methods defined in the parent class
@@ -120,7 +89,7 @@ The ability to model - turning business into several organic entities
     isinstance(A, B) # False
     ```
 
-#### Polymorphism
+## Polymorphism
 + Polymorphism generally has two possibilities
     + One is that a method is overridden from the parent class
 
@@ -148,7 +117,7 @@ The ability to model - turning business into several organic entities
                 pass
         ```
 
-#### Abstract class
+## Abstract class
 
 A class with abstract methods
 
@@ -167,7 +136,7 @@ A class with abstract methods
 
         In the above example, class A is an abstract class because it has an abstract method foo().
 
-#### Representation Invariant
+## Representation Invariant
 
 Every attribute in a class needs to meet specific conditions
 
@@ -229,7 +198,7 @@ Every attribute in a class needs to meet specific conditions
                 self.content = content[:280]
         ```
 
-### Exception Handling
+## Exception Handling
 
 Exceptions are also objects, and the parent class of common exceptions is `Exception`. So, any class that inherits from the `Exception` class can be recognized by the system as an exception type.
 
@@ -247,7 +216,7 @@ Exceptions are also objects, and the parent class of common exceptions is `Excep
     + `assert expression, [msg]` If the value of the expression is `False`, an assertion exception is thrown.
         + Example: `assert 0 == 1, "error msg"` This line of code will raise `AssertionError: error msg`
 
-#### Try Module
+## Try Module
 
 + The try module is divided into four parts: `try`, `except`, `else`, and `finally`
     + `try`: Code that needs verification, when an error occurs here, it will not throw an error directly but will jump to the `except` section to run the code.
@@ -272,7 +241,7 @@ Exceptions are also objects, and the parent class of common exceptions is `Excep
             # This code will be executed regardless of whether the code in the try block throws an exception
         ```
 
-### Abstract Data Types (ADT)
+## Abstract Data Types (ADT)
 
 Abstract Data Types (ADTs) only define the functionality (actions) of the data structure but do not specify how to implement it.
 
@@ -302,11 +271,11 @@ Abstract Data Types (ADTs) only define the functionality (actions) of the data s
     ```
     Here we can understand that this stack is implemented using a list, and we also know that the optimal solution for a stack is to implement it using a binary tree. This is the concept of ADT; it only defines what operations exist in the data structure but does not specify how these operations are implemented.
 
-### Stack and Queue
+## Stack and Queue
 
 They are Abstract Data Types (ADTs)
 
-#### Stack
+## Stack
 A last-in, first-out (LIFO) data structure
 
 + Defined actions: `push(item)`, `pop()`, `is_empty()`
@@ -324,7 +293,7 @@ A last-in, first-out (LIFO) data structure
         + `pop()`: Best O(1); Worst O(1); Average O(1)
         + `is_empty()`: Best O(1); Worst O(1); Average O(1)
 
-#### Queue
+## Queue
 A first-in, first-out (FIFO) data structure
 
 + Defined actions: `enqueue(item)`, `dequeue()`, `is_empty()`
@@ -342,11 +311,11 @@ A first-in, first-out (FIFO) data structure
         + `dequeue()`: Best O(1); Worst O(n); Average O(n) or O(1) (depending on the implementation of the linked list)
         + `is_empty()`: Best O(1); Worst O(1); Average O(1)
 
-### Singly Linked List
+## Singly Linked List
 
 A singly linked list is a one-dimensional list structure composed of a group of nodes.
 
-#### Node
+## Node
 In Python, a node is a private class consisting of `item` and `next`.
 ```Python 
 from __future__ import annotations
@@ -359,7 +328,7 @@ class _Node:
     next: Optional[_Node]
 ```
 
-#### Code for a Singly Linked List
+## Code for a Singly Linked List
 
 ```Python
 class LinkedList:
@@ -425,5 +394,36 @@ class LinkedList:
         curr.item = new_item
 ```
 
-### Conclusion
+## Memory Model
+
++ Variables
+    + Variables store the memory address of instances (objects) `id(var)`
+    + The equal sign `=` is used to assign values to variables, for example: `a = 1` assigns `id(1)` to the variable `a`
+
++ Storage Patterns
+
+    + When creating a "container" — `list`, `dict`, `object`
+        + Create outer variables first, then inner variables.
+
++ Copy Logic
+    ```python
+    lst = [[1], [2]]
+    new_lst = lst  
+    # new_lst stores id(lst)
+    # Changing new_lst[i] will also change lst[i]
+    
+    shallow_copy = lst[:] 
+    # Here, shallow_copy = [id([1]), id([2])] 
+    # This is a shallow copy, only allocates a new list address to new_lst
+    # Instances in new_lst are not copied
+    shallow_copy[1][0] = 3
+    print(lst) # [[3], [2]]
+    ```
++ Python Features
+    + When creating immutable instances, Python, to save memory, does not create new instances actively. It first looks in memory to see if the instance exists. If it does, it directly references the address of that instance; otherwise, it creates a new instance.
+        + For example, Python pre-creates instances of numbers `1~256` in memory, and when used, Python directly uses these pre-created instances of numbers.
+    + `lst.extend([1,2,3])` is equivalent to `lst += [1,2,3]`
+        + Both do not change the id of `lst`
+
+## Conclusion
 Good luck to everyone on the exam! Best wishes to all the examiners for a smooth exam!!
