--- a/src/assets/blog/1019-个人网站项目心得.md
+++ b/src/assets/blog/1019-个人网站项目心得.md
@@ -87,9 +87,9 @@ tags:
 
 # 7
 
-好了好了，最后再来谈谈，这个历经两年的项目的感悟，这个项目到最后其实收获也蛮大的，写完这个项目，最大的感悟就是我感觉我现在CSS玩的贼溜，啊哈哈哈哈哈。现在我Vue也通过这个项目练熟了，但很可惜tmd北美绝大多数公司需要的还是React开发，麻蛋，还得学。哎，这就是做码农的痛，永远有学不完的技术在等着你，只要你哪天不学了，你就落后了。这个行业迭代太快了，哎。。。
+好了好了，最后聊聊这个历经两年的项目的感悟和收获吧。
 
-好了好了，最后聊聊这个历经两年的项目的感悟和收获吧。项目写完后，最大的收获就是，我现在感觉自己CSS练的是越来越六了啊，哈哈哈哈！另外，通过这个项目，Vue也算是练得很熟了。不过有点扎心的是，北美这边绝大多数公司还是更需要React开发。唉，没办法，还得继续学React。这大概就是码农的宿命吧——永远有学不完的技术，只要哪天停下不学了，就会被行业甩在后头。（无奈）
+项目写完后，最大的收获就是，我现在感觉自己CSS练的是越来越六了啊，哈哈哈哈！另外，通过这个项目，Vue也算是练得很熟了。不过有点扎心的是，北美这边绝大多数公司还是更需要React开发。唉，没办法，还得继续学React。这大概就是码农的宿命吧——永远有学不完的技术，只要哪天停下不学了，就会被行业甩在后头。（无奈）
 
 至于这个项目后续会不会有新功能更新？答案是：那肯定会有啊！不过什么时候更新，就得看心情了。下一个可能的更新是把文章按tag分类？嗯，可能吧……但目前我还不想去做，虽然每篇文章我都写了tag。大概圣诞假期的时候再考虑一下吧，咳咳，嘿~~拖延症~~又犯了。
 
