--- a/src/assets/blog/1019-个人网站项目心得.md
+++ b/src/assets/blog/1019-个人网站项目心得.md
@@ -13,9 +13,9 @@ tags:
 
 事情要追溯到初二初三的时候，那会儿还主要是PC互联网的天下，移动互联网没像现在如此发达。各大论坛也还没关，博客文化还处于最后的辉煌，QQ空间上还能常见一堆长篇大论的动态。那个时候的我就是个普通屌丝，每天冲浪也就刷刷油管，逛逛论坛，看看别人写的文章。就是在那时，我萌生了一个想法：拥有一个属于自己的个人网站应该会很酷！
 
-可惜当时的我啥也不会，刚学点编程，入门的还是易语言（没错，就是易语言…离谱吧，但这就是我的启蒙语言）。虽然易语言玩得还算溜，但这跟网页开发离了十万八千里，就这点技术根本不足以支撑我开发个人网站。就这样，时间一晃就到了2022年。
+可惜当时的我啥也不会，刚学点编程，入门的还是易语言（没错，就是易语言…离谱吧，但这就是我的启蒙语言）。虽然易语言玩得还算溜，但这跟网页开发离了十万八千里，就这点技术根本不足以支撑我开发个人网站。
 
-那时学校有门计算机课，期末大作业需要提交一个项目计划。我蜜汁自信，直接写了个超庞大的计划：搞一个从前端到后端的云服务系统（详情可以去看我以前的文章）。问题是，我当时只会一点C++、Java和傻逼Python的皮毛知识，压根没做过网页开发。为了完成这个作业，我逼着自己学习了HTML、CSS、JavaScript和PHP的知识，在磕磕绊绊地总算弄出了一个成品后，暑假来了。或许是新的知识让我自信息爆破，我开始琢磨找点事情，来填补我那空虚的暑假时光。这时，做个“个人网站”的想法又跑回了我的脑子里。
+时间一晃就到了2022年。那时学校有门计算机课，期末大作业需要提交一个项目计划。我蜜汁自信，直接写了个超庞大的计划：搞一个从前端到后端的云服务系统（详情可以去看我以前的文章）。问题是，我当时只会一点C++、Java和傻逼Python的皮毛知识，压根没做过网页开发。为了完成这个作业，我逼着自己学习了HTML、CSS、JavaScript和PHP的知识，在磕磕绊绊地总算弄出了一个成品后，暑假来了。或许是新的知识让我自信息爆破，我开始琢磨找点事情，来填补我那空虚的暑假时光。这时，做个“个人网站”的想法又跑回了我的脑子里，这才有了下面这条朋友圈，宣告我的个人网站项目正式启动。
 
 ![项目开始](./blogImg/1019/项目开始.jpg)
 
@@ -61,15 +61,17 @@ tags:
 
 # 5
 
-移动端适配搞定后，我兴冲冲地开始搬运过去写的文章，一篇篇地上传到我的新网站。8月初，我的个人网站终于正式上线了！正当我兴高采烈的想要发条朋友圈庆祝一下的时候，突然发现，我操了，我手机打不开我的网站？
+移动端适配搞定后，我兴冲冲地开始搬运过去写的文章，一篇篇地上传到我的新网站。8月初，我的个人网站终于正式上线了！正当我兴高采烈的想要发条朋友圈庆祝一下的时候，突然发现，我操了，我手机上的浏览器怎么打不开我的网站？
 
 好吧，认命了。果然，老天就是不让我这么顺利。
 
-问题在哪里呢？我沉下心，一连调试了一周，最终还是通过在Stack Overflow上的一名大佬指点，在终于发现问题竟然出在我的手机上。因为我不喜欢更新系统，手机还停留在iOS 14.4版本，而这个版本的又WebKit太老了，不支持一些Vue 3的新feature。。。我**的啊？WTF？不至于吧？iOS 14.4也没那么老吧？不是哥么？啊？
+问题在哪里呢？我沉下心，一连调试了一周，最终还是通过在Stack Overflow上的一名大佬指点，才发现，因为我不喜欢更新系统，手机还停留在iOS 14.4版本，而这个版本的又WebKit太老了，不支持一些Vue 3的新feature，所以才导致网页无法被加载。
 
-当时真是万般无奈啊，我心里琢磨着，难道是Vue.js太新了，旧版本系统不支持？不应该啊，Vue 3推出时，iOS应该还没到14啊。而且我项目部署时都已经build过了，所有页面都转成JS文件，按理说应该没问题啊。
+> 我**啊？WTF？不至于吧？iOS 14.4也没那么老吧？不是哥么？啊？
 
-为了搞清楚，我索性新建了一个干净的小项目，部署后用手机测试，结果完全没问题！这就离谱了，为啥偏偏我的网站打不开呢？难道是某个依赖出了问题，导致我那老古董的iOS设备不认？
+我当时还特意上网查了查发布时间，结果发现不对劲啊……Vue 3推出时，iOS都还没更新到14.4呢。而且我项目部署的时候已经build过了，所有页面都转成了JS文件，按理说不应该有问题才对啊。
+
+为了确认我的观点是正确的，我索性新建了一个干净的小项目，部署后用手机测试，结果完全没问题！这就离谱了，为啥偏偏我的网站打不开呢？难道是某个依赖出了问题，导致我那老古董的iOS设备不认？
 
 8月里，我几乎每天都在和这个问题斗智斗勇。可折腾了几轮依旧无解，就在快要放弃的时候，有一天晚上，我突然灵光一闪：为什么不直接把文件拆开，一个一个排查，找出是哪个文件的代码导致问题？洗完澡头发都没吹，我就直接坐到了电脑前，开始逐个排查。
 
