--- a/src/assets/blog/1019-个人网站项目心得.md
+++ b/src/assets/blog/1019-个人网站项目心得.md
@@ -65,13 +65,13 @@ tags:
 
 好吧，认命了。果然，老天就是不让我这么顺利。
 
-问题在哪里呢？我沉下心，一连调试了一周，最终还是通过在Stack Overflow上的一名大佬指点，才发现，因为我不喜欢更新系统，手机还停留在iOS 14.4版本，而这个版本的又WebKit太老了，不支持一些Vue 3的新feature，所以才导致网页无法被加载。
+问题到底出在哪呢？我沉下心来，一连调试了整整一周。最终，经Stack Overflow上一位大佬的指点下，终于把问题范围缩小到了手机系统版本过低的可能性上。因为我个人不太喜欢更新系统，手机一直停留在iOS 14.4，而这个版本的WebKit实在太老了，可能不支持一些新的特性，才导致网页无法正常加载。
 
-> 我**啊？WTF？不至于吧？iOS 14.4也没那么老吧？不是哥么？啊？
+> 啊？WTF？不至于吧？iOS 14.4也没那么老吧？不是吧？哥？
 
-我当时还特意上网查了查发布时间，结果发现不对劲啊……Vue 3推出时，iOS都还没更新到14.4呢。而且我项目部署的时候已经build过了，所有页面都转成了JS文件，按理说不应该有问题才对啊。
+我这个项目里，你要说用的最新的技术，除了Vue 3框架以外应该也没别的了吧？为了搞清楚情况，我还特意上网查了查发布时间，结果发现根本不对劲啊——Vue 3推出的时候，iOS还没更新到14.4呢。而且，我项目部署的时候早就完成了build操作，所有页面都已经转成了JS文件。按理说，这种情况根本不应该出问题啊！
 
-为了确认我的观点是正确的，我索性新建了一个干净的小项目，部署后用手机测试，结果完全没问题！这就离谱了，为啥偏偏我的网站打不开呢？难道是某个依赖出了问题，导致我那老古董的iOS设备不认？
+我索性新建了一个干净的小项目，部署后用手机测试，结果完全没问题！这就离谱了，为啥偏偏我的网站打不开呢？难道是某个依赖出了问题，导致我那老古董的iOS设备不认？
 
 8月里，我几乎每天都在和这个问题斗智斗勇。可折腾了几轮依旧无解，就在快要放弃的时候，有一天晚上，我突然灵光一闪：为什么不直接把文件拆开，一个一个排查，找出是哪个文件的代码导致问题？洗完澡头发都没吹，我就直接坐到了电脑前，开始逐个排查。
 
