--- a/src/assets/blog/1003-无职转生评价.md
+++ b/src/assets/blog/1003-无职转生评价.md
@@ -8,25 +8,29 @@ tags:
   - 点评
 ---
 
-最近，《无职转生~到了异世界就拿出真本事~》这部动画越来越火，第二集也已经播出。为了更深入地了解这部作品，我花了八十个小时把24卷全都读完了。下面是我的一些感想和看法。
+## 1
 
-#### 初期的成功
+最近很火地动画，现在第二话也应该播出了，在这一周里我花了八十个小时把24卷全部读完了。
 
-前15卷的内容给我留下了深刻的印象。作者在人物塑造和角色心路历程的描写上做得非常出色。虽然其中有一些情节上的小瑕疵，但这些问题并不影响整体的观感。主人公在异世界中经历了亲人离世的痛苦后，不断成长，逐渐承担起了家庭的责任。他为了保护家人，愿意付出一切，这种深情和责任感令人动容。
+先来说感想吧，前15卷我觉得是非常成功的，不管是人物塑造，还是角色的心路历程都把控的很好，虽然里面有一些不尽人意的剧情，但那也只是鸡蛋里挑骨头，无伤大雅。主人公即使是转生也失去亲人而痛苦不已，而在不断旅行经历了形形色色是事务后的主人公，建立了家庭，开始有了责任心，家人的生命受到危险会不惜一切代价去抗争。
 
-#### 后期的失望
+## 2
 
-然而，从第16卷开始，故事的方向出现了问题。作者转向了战争的描写，而这部分的剧情却让我感到失望。主人公的性格设定逐渐崩塌，原本坚决保护家人、不惜一切代价的形象开始动摇。在第17卷中，主人公反复犹豫不决，在面对敌人时选择了求和，即便家人因此受伤，也没有立刻做出果断的行动。这样的情节让人觉得不够现实且过于犹豫，主人公在战斗中的表现也与他之前的形象大相径庭。尤其是考虑到他已经20岁，前世34岁，这样的心理状态显得更为幼稚。
+而到了第16卷，当作者开始描写战争的部分后，始主人公的人设开始崩塌，曾经那个为了家人的性命、为了家人的感受，不惜一切代价也要抗争到底的人设崩塌了, 从这里开始，鲁迪的行为就一直戴着圣母的味道，每当描写到战争的时候，就让人不仅感到恶心、想吐。
 
-#### 综合评价
+首先我不反对圣母行文本身，但圣母这个的运用是要看环境的，就打个比方，如果鲁迪是在现实里，在现世界的环境里那样想是十分正常的，在其周围的人的遇到要杀人是的感想基本上都是懦弱、胆怯。但是在书中，鲁迪是处于一个不同的世界，在书中世界观下对于互相厮杀是一件正常、且常有发生的事情。在那样的价值观下成长到了20岁，这中间还有2年的旅行和3年的独自一人游荡，我不觉得还能继续保持作为一个地球人的价值观。
 
-尽管后期有一些不尽如人意的地方，但整体来看，这部小说的框架和情节管理仍然表现出色。作者对时间线和故事节奏的把控很有经验。总体来说，我会给这部作品打8分（满分10分）。
+就比如在第17卷中，主人公曾多次发誓如果要杀人的话，即便是要脏了自己的手，也绝对不会让自己的家人动手。而实际情况便是在杀人前犹豫不决、试着求和，即便家人已经因为自己的犹豫不决而受伤，也没有立刻做出觉悟，直到被逼近死角。像这样的剧情在小说后期都是经常发生的，不够现实、唯唯诺诺，直到故事的最后一站也未能展现出像前期那样男人该有骨气，实在是太幼稚了。
 
-#### 未来展望
+>（Ps：当时主角已经20岁前后了加上穿越前34岁，就已经能算得上是一名50岁的男人了）
 
-值得一提的是，作者在web版的后记中提到，《无职转生》似乎是为了后续剧情而写的前传。尽管后期有些情节让人不满，但我对未来的发展依然充满期待。希望作者能在接下来的故事中恢复之前的精彩和深度。
+## 3
 
-总的来说，《无职转生》虽然有瑕疵，但仍然是一部值得一读的作品。希望未来能看到更多精彩的内容，也希望作者能够在后续的作品中修正一些问题，给读者带来更多惊喜。
+好了坏的方面点到为止，作为一本已经完结的轻小说，尽管有些剧情不尽人意，但整体的框架还是不错的，作者对剧情的管理和时间的把控也做的很好。评分的话，满分10分，我大概会给8分吧。
+
+最后看到作者在web版后记中的后记似乎表明《无职转生》这部小说似乎也是为了后续的剧情而写的前传。总之不管有没有还是期待一下吧，看样子应该也挺精彩的。
+
+**最后声明：本帖子仅代表个人观点**
 
 ![无职转生全家福](./blogImg/1003/无职转生全家福.jpg)
 *（插一张我很喜欢的插画）*
