--- a/src/assets/blog/1021-青猪完结评价.md
+++ b/src/assets/blog/1021-青猪完结评价.md
@@ -37,4 +37,4 @@ tags:
 
 ![青猪第15卷封面 (美东美织) ](./blogImg/青猪第15卷封面.jpg)
 
-<p style="text-align: center;"><em>(这是青猪完结卷 第15卷 封面，上面的人物是美东美织，怎么样是不是很心动！！！)</em></p>
+<p style="text-align: center;"><em>(青猪完结卷 第15卷 封面，上面的人物是美东美织，怎么样是不是很心动！！！)</em></p>
