--- a/src/assets/blog/1019-个人网站项目心得.md
+++ b/src/assets/blog/1019-个人网站项目心得.md
@@ -15,7 +15,7 @@ tags:
 
 可惜当时的我啥也不会，刚学点编程，入门的还是易语言（没错，就是易语言…离谱吧，但这就是我的启蒙语言）。虽然易语言玩得还算溜，但这跟网页开发离了十万八千里，就这点技术根本不足以支撑我开发个人网站。
 
-时间一晃就到了2022年。那时学校有门计算机课，期末大作业需要提交一个项目计划。我蜜汁自信，直接写了个超庞大的计划：搞一个从前端到后端的云服务系统（详情可以去看我以前的文章）。问题是，我当时只会一点C++、Java和傻逼Python的皮毛知识，压根没做过网页开发。为了完成这个作业，我逼着自己学习了HTML、CSS、JavaScript和PHP的知识，在磕磕绊绊地总算弄出了一个成品后，暑假来了。或许是新的知识让我自信息爆破，我开始琢磨找点事情，来填补我那空虚的暑假时光。这时，做个“个人网站”的想法又跑回了我的脑子里，这才有了下面这条朋友圈，宣告我的个人网站项目正式启动。
+时间一晃就到了2022年。那时学校有门计算机课，期末大作业需要提交一个项目计划。我蜜汁自信，直接写了个超庞大的计划：搞一个从前端到后端的云服务系统（详情可以去看我以前的文章）。问题是，我当时只会一点C++、Java和傻逼Python的皮毛知识，压根没做过网页开发。为了完成这个作业，我逼着自己学习了HTML、CSS、JavaScript和PHP的知识，在磕磕绊绊地总算弄出了一个成品后，暑假来了。或许是新的知识让我自信心爆棚，我开始琢磨找点事情，来填补我那空虚的暑假时光。这时，做个“个人网站”的想法又跑回了我的脑子里，这才有了下面这条朋友圈，宣告我的个人网站项目正式启动。
 
 ![项目开始](./blogImg/1019/项目开始.jpg)
 
