--- a/src/assets/blog/1021-青猪完结评价.md
+++ b/src/assets/blog/1021-青猪完结评价.md
@@ -3,7 +3,9 @@ id: 1021
 title: 迟到的『青猪』完结评价
 date: 2025-12-04
 tags: 
-- 生活
+- 动漫
+- 二次元
+- 点评
 ---
 
 > 我真没想到，青猪读完后后劲太大了，导致这篇读后感竟然比我计划了大半年的东京漫游记要早写出来。
