--- a/src/assets/blog/1005-命运石之门观后感.md
+++ b/src/assets/blog/1005-命运石之门观后感.md
@@ -8,13 +8,11 @@ tags:
 - 点评
 ---
 
-今天终于把以前不太愿意看的番《命运石之门》补完了，来谈谈我的感受吧。
+今天把以前一部非常不想看的番补完了《命运石之门》，说说感想吧。
 
-说实话，我不明白为什么大家会把这部作品称为“神作”。从客观角度看，它确实有非常有趣的设定和系列构成，分镜和表演也非常出色。然而，关于剧情的评价，我真的是难以抒发。你说它烂吧，确实也有那么点烂；我在补番过程中几次都有点想吐。但奇怪的是，这剧情竟然还能让你坚持看完。
+不知道为什么会称这东西为神作。客观来讲这部番拥有非常有趣的设定和系列构成，分镜表演也很出色，但是，这番的剧情我真的不知道去怎么评价了，你说它烂吧，它确实很烂，补番过程中几次都把我看吐了，但就这剧情还能却有股魔力拽你把它看完。[捂脸]
 
-**总结一下《命运石之门》第一季和第二季的体验：**
+总结一下石头门第一季和第二季
+如果说《石头门》第一季是把一盘子shi放到你面前，你可以选择不吃；那么第二季就是把一盘子shi糊到你脸上，你不吃都不行。但你吃到最后发现它tm味道还可以的那种
 
-- **第一季：** 就像是把一盘“shi”摆在你面前，你可以选择不吃。虽然这盘菜看上去并不令人愉快，但你还有选择的余地。
-- **第二季：** 则变成了把那盘“shi”糊到你脸上，让你不得不吃。不管你多不情愿，最终发现它竟然还有点意外的味道。[捂脸]
-
-总的来说，《命运石之门》是个不太可能会再重温的作品。尽管有些部分让人难以接受，但最终还是有其独特的魅力。以后我应该不会再刷第二遍了。
+总之，石头门我是不会再去刷第二遍了。
