--- a/src/assets/blog/1020-2025元旦感悟.md
+++ b/src/assets/blog/1020-2025元旦感悟.md
@@ -1,6 +1,6 @@
 ---
 id: 1020
-title: 2024年度总结：迷茫与成长的交织
+title: 2024年度总结
 date: 2025-01-01
 tags: 
 - 生活
@@ -13,23 +13,22 @@ tags:
 
 有人说，人生对于失败的容错率是很大的。这句话我理解，也认同，可就是忍不住对自己内耗。哪怕是一点点的小失误，也能让我纠结许久。明明知道没人能做到完美，但总是不甘心。直到年末，才终于想明白一些事情。然而，身体已然吃不消了。过度内耗带来的后果是作息混乱，染上肺炎，住了院。那些日子仿佛一场警钟，提醒我必须好好审视自己了。
 
-## 2024 年度报告
+## 1
 但抱怨就到这里吧，来总结一下这一年的收获：
 
-**1. 两个项目的完工，和一个“新家”的落成**
+先说我完成的两个项目吧。第一个是 `Timetable Builder` ，这大家可能在我之前的博文里已经见过了。另一个是我的个人网站，或者更准确地说，是个人博客（你现在正在看的这个网站）。这个项目其实从两年前就立了项，但一直停留在 “新建文件夹” 的阶段。今年终于把它完成了，算是给自己一个交代。
 
-今年我完成的两个项目，第一个是 `Timetable Builder`，另一个则是我的 `个人网站`，也就是你们现在正在浏览的这个站点。这个项目从立项到完成历经两年，终于在今年画上了句号，算是对自己的一份交代。关于我写这个网站的详细心路历程，可以参考我之前的一篇文章，挺搞笑的，啊哈哈哈哈。
+博客上线后，我把很多长文都搬到了上面。以前总是在朋友圈碎碎念，但字数限制让我头疼，而且过后回看也不方便，于是干脆把这些记录自己、写给未来的文章留在博客里。
 
-**2. 技能的积累，代码与命令行的跃迁**
+## 2
+这一年里项目虽然没做很多，但这一年练了不少技能。通过几个项目，我的 Web 开发水平飞速提升，从最初写一个页面都要琢磨半天，到现在敲代码如行云流水，已经有了几分驾轻就熟的感觉。那种熟练的快感，像极了当年练习 C++ 的时候。
 
-过去一年里，我项目虽然没做很多，但这一年练了不少技能。通过几个项目，我的 Web 开发水平飞速提升，从最初写一个页面都要琢磨半天，到现在敲代码如行云流水，已经有了几分驾轻就熟的感觉。那种熟练的快感，像极了当年练习 C++ 的时候。
-
-今年也跟 Linux 打了不少交道。我的一台笔记本被我改成了 Linux 系统，再结合之前的服务器管理的经验，终于让我把命令行操作练到了如臂使指的境界，体会到了什么叫 Terminal 永远的神！一开始或许会觉得不习惯，但只要坚持一周，你就会发现它的强大。现在再回头看 Windows，感觉它像个弟弟。
+今年也跟 Linux 打了不少交道。我的笔记本也被我改成了 Linux 系统，再结合服务器管理的经验，终于让我把命令行操作练到了如臂使指的境界，体会到了什么叫 Terminal 永远的神！一开始或许会觉得不习惯，但只要坚持一周，你就会发现它的强大。现在再回头看 Windows，感觉它像个弟弟。（bushi
 
 > 牢骚和感悟，就写到这里吧，让2024年的迷茫与忙碌，就此画上句号。
 
 ## 结语
-对于即将到来的2025年，我不想再给自己太多压力了，轻松一点，定几个简单的小目标：照顾好身体，坚持锻炼；学业上，尽力就好，别再强求完美；多给自己一些闲暇的时间，写些感兴趣的项目。如果暑假能找到一份实习，那当然是锦上添花，找不到也没关系，让每一天都过得踏实而有意义才是最重要的。
+对于即将到来的2025年，我不想再给自己太多压力了，轻松一点，定几个简单的小目标：照顾好身体，坚持锻炼；学业上，尽力就好，别再强求完美，多给自己一些闲暇的时间，写些感兴趣的项目。如果暑假能找到一份实习，那当然是锦上添花，找不到也没关系，让每一天都过得踏实而有意义才是最重要的。
 
 最后，在新的一年里，愿你我都能拥有健康的身体，过的每一天都充实无悔。
 
