--- a/src/assets/blog/1001-关于新冠的误解.md
+++ b/src/assets/blog/1001-关于新冠的误解.md
@@ -7,34 +7,40 @@ tags:
   - 科普
 ---
 
-大家对新型冠状病毒（COVID-19）肯定都不陌生，但最近我发现我周围有些人的认知真是让人哭笑不得。发这条博客并不是针对谁，只是想借此机会普及一下正确的知识。请大家不要对号入座哦！
+相信大家都认识这是什么病毒，可是最近我发现，在我周围有些人对这个病毒的认知，单纯的可怕。我先声明一下我发这条博文无意冒犯，请不要对号入座。
 
-首先，我来分享一下我听到的一些关于新冠病毒的误解：
+好了，那么我来讲一下这是我听到的别人对这个病毒的理解：
 
-1. **“这个病毒通过口腔飞沫传播，口腔飞沫在空气中最多飞行3米，所以只要保持超过3米的距离就不会被传染。”**
-2. **“只要保持3米以上的距离，就可以摘掉口罩，因为飞沫穿不过去。”**
-3. **“多锻炼增强免疫系统，即使感染了也能抵抗病毒。”**
+1、这个病毒是通过口腔飞沫传染的，而口腔飞沫最多在空气中飞行3米，所以只要两人的距离超过三米就不会被传染。
+2、这是1的衍生-只要两人保持在三米或三米以上就可以摘掉口罩，因为飞沫穿不过去。
+3、多锻炼增强免疫系统，这样就算得的上了病毒也能扛过去。
 
-这些说法真的是令人啼笑皆非。如果你稍微了解一点常识，就会知道这些解释完全不靠谱。那么，真正的情况是怎样的呢？
+怎么样？搞笑吧？只要有点常识都会觉得这样的解释非常荒谬。你们真的清楚这个病毒怎么传播、怎么致人死亡的吗？
 
-### 了解病毒传播的正确方式
+**首先要理解这个病毒是怎么传播的就先需要理解什么叫做气溶胶。**
 
-要理解新冠病毒的传播方式，我们首先需要了解一个概念——气溶胶。
+气溶胶：指在空气中悬浮的颗粒物，颗粒直径一般小于100微米（0.1毫米），我们熟悉的PM2.5就是一种气溶胶。病毒气溶胶是生物气溶胶的一种，生物气溶胶指悬浮在空气中的病毒、细菌、真菌、花粉以及其他来自生物的副产物等。飞沫其实也是生物气溶胶的一种，只不过来源于人，人呼出来的是高湿度的生物气溶胶颗粒。如果是病人呼出的气溶胶，可能包括病毒等多种病原体。（懂了吗？如果没有看懂可以自行百度，那里解释的更清楚。）
 
-**气溶胶**是指悬浮在空气中的微小颗粒物，例如PM2.5就是一种气溶胶。新冠病毒气溶胶是生物气溶胶的一种，指的是空气中悬浮的病毒颗粒。飞沫也是一种气溶胶，但它主要由人体呼出的高湿度气体组成。病人在咳嗽、打喷嚏或呼吸时，会释放出含有病毒的气溶胶，这些气溶胶会悬浮在空气中。如果环境通风不好，这些气溶胶的浓度会迅速累积，增加感染的风险。
+新型冠状病毒就是通过气溶胶来传播的，就如让面定义所说，新冠病毒气溶胶再从患者体内呼出后会悬浮在空气中，记住是悬浮在空气中！所以如果在通风条件不好的封闭或者半封闭的情况下，患者呼吸、咳嗽、打喷嚏产生的携带病毒的气溶胶浓度会马上累积起来。所以就算你距离别人距离3米远也是有被传染的风险，更不要摘掉口罩。（当然如果是在户外如公园这种开放的环境中，病毒会很快被稀释，而在这种场景里被感染的几率可以说跟中彩票的概率一样大，所以我们还是可以放心到户外散步，不过这仅限于人少的情况下，这里建议还是少外出，如果要外出就要做好防御措施）
 
-即使你与别人保持3米的距离，只要在封闭或半封闭的空间内，你仍然有感染的可能。室外空气流通良好，病毒会很快被稀释，感染的几率大大降低，但在拥挤的环境中，仍然需要保持警惕。
+病毒是如何传播的基本上就差不多说完了，下面来谈谈新冠病毒是如何导致人死亡的：
 
-### 为什么新冠病毒会导致严重后果
+新型冠状病毒其实是一种自限性疾病，说白了就是——就算你什么都不做它也会痊愈。就像感冒一样，你就算不吃药基本上一周后你也同样能痊愈。
 
-新冠病毒属于自限性疾病，这意味着大多数人即使不做特别治疗，也会在一段时间后自然恢复。可是，为什么有那么多人因为新冠病毒而死亡呢？
+**但是为什么像这样的疾病会导致那么多人死亡呢？**
 
-这涉及到一个叫做“细胞因子风暴”的现象。简单来说，当病毒感染人体时，免疫系统会产生过度反应，攻击体内的所有细胞，而不仅仅是病毒。这种情况就像是军队误以为所有士兵都是敌人而展开全面攻击。最终，免疫系统的过度反应会导致严重的组织损伤甚至死亡。
+这就要说到一个专业用词“细胞因子风暴”又名免疫风暴，就如同字面上所说的一样，因为你的免疫系统不知道在你体内哪个是病毒，而为了杀死那个病毒不得不尽兴大面积攻击去杀死它。可能我解释的不是很清楚，这里我就举一个例子：在一个军队里面混入了一个间谍，他冒充的非常好甚至骗过了长官，而有一天长官获得了一条情报，情报的内容是军队里混入了间谍，长官为了国家做出了一个决定，不惜一切代价去找到这名间谍并杀死他，最后结果就是为了杀死那名间谍，长官将整只军队杀死了。现在是不是形象多了，其实并不是病毒杀死了你，而是你自己把你自己杀死了。看完这个后是不是就清楚了，为什么我说提高免疫力可以帮你扛过病毒是个笑话，因为这就像是本来长官只能拿小刀一个一个的将是并士兵杀死，但他的上司看到他这样做太辛苦了，送了他一把加特林一个道理。（Ps：我并不是说提高免疫力不是一个好的事情，只不过是在说提高免疫力去扛过新冠是一个笑话）
 
-所以，提高免疫力确实对健康有益，但它并不能直接帮助你“扛过”新冠病毒。这个病毒的威胁主要在于它引发的免疫风暴，而不是病毒本身。
+好了，不知道还有谁看到了这里，我其实一开始不想写这条朋友圈，可是最后我还是实在忍不住了，思考再三后写出了这遍文案，想吐槽一下顺便给不知情的人科普一下，以免作出愚蠢的事情。
 
-### 针对疫情期间运动的建议
+在最后的最后我还是想吐槽一下那些在疫情期间去健身房做剧烈运动的人，你们脑子是毛病还是就真的不怕死，就算不知道气溶胶也得知道带着口罩运动会导致呼吸不畅——摄氧不足——心跳加快——心肺负担加重——心肺工作效率降低——呼吸更加不畅的恶性循环，情况严重者甚至有猝死的可能。所以如果你十分想运动的话有条件者在家里运动最好，如果是在想要去户外运动我的建议就是找一片人比较少的公园跑跑步吧，别像个弱智东西一样去健身房里锻炼。
 
-最后，我要特别提醒一下那些在疫情期间去健身房进行剧烈运动的人。戴着口罩运动会导致呼吸不畅，增加心肺负担，严重时甚至可能引发猝死。如果你想运动，建议选择人少的户外场所或者在家中进行锻炼，避免在封闭的环境中高强度运动。
+文案内容里的专业知识有一些涉及到了参考/借鉴部分照抄请谅解，临时想出来的并没有用多少时间去完成。
 
-总的来说，大家出门时一定要佩戴口罩，不要因为觉得没事就随意摘掉。希望这篇文章能帮助大家更好地理解新冠病毒，并采取适当的防护措施。
+(n.d.). Retrieved September 17, 2020, from http://www.xinhuanet.com/politics/2020-02/10/c_1125554158.htm
+
+新冠肺炎是"自限性疾病"，为什么会死那么多人？. Retrieved September 17, 2020, from https://zhuanlan.zhihu.com/p/106777182
+
+新浪体育综合. (2020, May 06). 频频发生戴口罩运动猝死：戴口罩跑步心肺压力有多大. Retrieved September 17, 2020, from https://sports.sina.cn/running/2020-05-06/detail-iirczymk0086171.d.html?vt=4
+
+最后奉劝大家出门记得戴口罩，不要因觉得没事就把口罩摘了！
