--- a/src/assets/blog/1001-关于新冠的误解.md
+++ b/src/assets/blog/1001-关于新冠的误解.md
@@ -12,7 +12,9 @@ tags:
 好了，那么我来讲一下这是我听到的别人对这个病毒的理解：
 
 1、这个病毒是通过口腔飞沫传染的，而口腔飞沫最多在空气中飞行3米，所以只要两人的距离超过三米就不会被传染。
+
 2、这是1的衍生-只要两人保持在三米或三米以上就可以摘掉口罩，因为飞沫穿不过去。
+
 3、多锻炼增强免疫系统，这样就算得的上了病毒也能扛过去。
 
 怎么样？搞笑吧？只要有点常识都会觉得这样的解释非常荒谬。你们真的清楚这个病毒怎么传播、怎么致人死亡的吗？
@@ -35,12 +37,12 @@ tags:
 
 在最后的最后我还是想吐槽一下那些在疫情期间去健身房做剧烈运动的人，你们脑子是毛病还是就真的不怕死，就算不知道气溶胶也得知道带着口罩运动会导致呼吸不畅——摄氧不足——心跳加快——心肺负担加重——心肺工作效率降低——呼吸更加不畅的恶性循环，情况严重者甚至有猝死的可能。所以如果你十分想运动的话有条件者在家里运动最好，如果是在想要去户外运动我的建议就是找一片人比较少的公园跑跑步吧，别像个弱智东西一样去健身房里锻炼。
 
-文案内容里的专业知识有一些涉及到了参考/借鉴部分照抄请谅解，临时想出来的并没有用多少时间去完成。
-
-(n.d.). Retrieved September 17, 2020, from http://www.xinhuanet.com/politics/2020-02/10/c_1125554158.htm
-
-新冠肺炎是"自限性疾病"，为什么会死那么多人？. Retrieved September 17, 2020, from https://zhuanlan.zhihu.com/p/106777182
-
-新浪体育综合. (2020, May 06). 频频发生戴口罩运动猝死：戴口罩跑步心肺压力有多大. Retrieved September 17, 2020, from https://sports.sina.cn/running/2020-05-06/detail-iirczymk0086171.d.html?vt=4
-
 最后奉劝大家出门记得戴口罩，不要因觉得没事就把口罩摘了！
+
+文案内容里的专业知识有一些涉及到了参考/借鉴了以下文章，请见谅，临时想出来的并没有用多少时间去完成。
+
+[1] (n.d.). Retrieved September 17, 2020, from http://www.xinhuanet.com/politics/2020-02/10/c_1125554158.htm
+
+[2] 新冠肺炎是"自限性疾病"，为什么会死那么多人？. Retrieved September 17, 2020, from https://zhuanlan.zhihu.com/p/106777182
+
+[3] 新浪体育综合. (2020, May 06). 频频发生戴口罩运动猝死：戴口罩跑步心肺压力有多大. Retrieved September 17, 2020, from https://sports.sina.cn/running/2020-05-06/detail-iirczymk0086171.d.html?vt=4
