--- a/src/assets/blog/1005-命运石之门观后感.md
+++ b/src/assets/blog/1005-命运石之门观后感.md
@@ -13,6 +13,6 @@ tags:
 不知道为什么会称这东西为神作。客观来讲这部番拥有非常有趣的设定和系列构成，分镜表演也很出色，但是，这番的剧情我真的不知道去怎么评价了，你说它烂吧，它确实很烂，补番过程中几次都把我看吐了，但就这剧情还能却有股魔力拽你把它看完。[捂脸]
 
 总结一下石头门第一季和第二季
-如果说《石头门》第一季是把一盘子shi放到你面前，你可以选择不吃；那么第二季就是把一盘子shi糊到你脸上，你不吃都不行。但你吃到最后发现它tm味道还可以的那种
+如果说《石头门》第一季是把一盘子shi放到你面前，你可以选择不吃，那么第二季就是把一盘子shi糊到你脸上，你不吃都不行。但你吃到最后发现它tm味道还可以的那种
 
 总之，石头门我是不会再去刷第二遍了。
